--- a/Tests/genetic_model.ipynb
+++ b/Tests/genetic_model.ipynb
@@ -44,6 +44,7 @@
    "source": [
     "import timeit\n",
     "import numpy as np\n",
+    "from statistics import median\n",
     "\n",
     "#get average time\n",
     "def validation_time(attempt, n = 1, f = naive_checker):\n",
@@ -53,11 +54,34 @@
     "        f(attempt)\n",
     "        end_time = timeit.default_timer()\n",
     "        times.append(end_time - start_time)\n",
-    "    return sum(times)/n\n",
-    "\n",
+    "    return median(times)\n",
+    "    #return sum(times)/n\n",
     "print(validation_time(\"floccinaucinihilipilification\", 100))\n",
     "print(validation_time(\"floccinaucinihiiiiiiiiiiiiiii\", 100))\n",
     "print(validation_time(\"super\", 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterative Cracker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "pass_length = len(_password)\n",
+    "valid_charset = string.ascii_lowercase\n",
+    "n_repeats = 61\n",
+    "\n",
+    "initialpass = ''.join(random.choice(valid_charset) for _ in range(pass_length))"
    ]
   },
   {
@@ -107,7 +131,7 @@
     "\n",
     "init_population = [''.join(random.choice(valid_charset) for _ in range(pass_length)) for _ in range (pop_size)]\n",
     "\n",
-    "init_population[0] = \"floccinaucinihiiiiiiiiiiiiiii\"\n",
+    "#init_population[0] = \"floccinaucinihiiiiiiiiiiiiiii\"\n",
     "print(init_population)\n"
    ]
   },
@@ -131,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generations = 10000\n",
+    "generations = 1000\n",
     "\n",
     "final_population, final_fitness = genetic_algorithm(init_population, generations)"
    ]
@@ -482,7 +506,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tests-rkhLYljQ",
+   "display_name": "Tests-72WcJzld",
    "language": "python",
    "name": "python3"
   },
@@ -496,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
