--- a/Tests/genetic_model.ipynb
+++ b/Tests/genetic_model.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "66.7 ns ± 6.36 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "997 ns ± 122 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "984 ns ± 205 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "_password = \"floccinaucinihilipilification\"\n",
     "\n",
@@ -38,9 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5999976312741637e-06\n",
+      "6.00004568696022e-07\n",
+      "1.00000761449337e-07\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "import numpy as np\n",
@@ -70,9 +92,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             \n",
+      "best\n",
+      "                            \n",
+      "best\n",
+      "                           \n",
+      "best\n",
+      "                          \n",
+      "best\n",
+      "                         \n",
+      "best\n",
+      "                        \n",
+      "best\n",
+      "                       \n",
+      "best\n",
+      "                      \n",
+      "best\n",
+      "                     \n",
+      "best\n",
+      "                    \n",
+      "best\n",
+      "                   \n",
+      "best\n",
+      "                  \n",
+      "best\n",
+      "                 \n",
+      "best\n",
+      "                \n",
+      "best\n",
+      "               \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n",
+      "best\n",
+      "              \n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import string\n",
@@ -81,7 +169,22 @@
     "valid_charset = string.ascii_lowercase\n",
     "n_repeats = 61\n",
     "\n",
-    "initialpass = ''.join(random.choice(valid_charset) for _ in range(pass_length))"
+    "initialpass = ''.join(\" \" for _ in range(pass_length))\n",
+    "print(initialpass)\n",
+    "time = validation_time(initialpass, n_repeats)\n",
+    "\n",
+    "for i in range(pass_length):\n",
+    "    nextchar = \"\"\n",
+    "    for char in valid_charset:\n",
+    "        tester = initialpass[:i] + char + initialpass[i+1:]\n",
+    "        #print(tester)\n",
+    "        testtime = validation_time(tester, n_repeats)\n",
+    "        if testtime > time:\n",
+    "            time = testtime\n",
+    "            nextchar = char\n",
+    "    initialpass = initialpass[:i] + nextchar + initialpass[i+1:]\n",
+    "    print(\"best\")\n",
+    "    print(initialpass)"
    ]
   },
   {
