Calculating probability estimation

--- a/Tests/genetic_model.ipynb
+++ b/Tests/genetic_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,9 +18,9 @@
      "text": [
       "False\n",
       "True\n",
-      "68.4 ns ± 5.97 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "772 ns ± 8.68 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "510 ns ± 6.84 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "122 ns ± 8.68 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "2.1 μs ± 612 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "880 ns ± 38.6 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -52,16 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.200009137392044e-06\n",
-      "8.00006091594696e-07\n",
-      "1.0011717677116394e-07\n"
+      "1.6999983927235007e-06\n",
+      "1.1000010999850929e-06\n",
+      "1.9999970390927047e-07\n",
+      "1.9999970390927047e-07\n"
      ]
     }
    ],
@@ -82,7 +83,42 @@
     "    #return sum(times)/n\n",
     "print(validation_time(\"floccinaucinihilipilification\", 100))\n",
     "print(validation_time(\"floccinaucinihiiiiiiiiiiiiiii\", 100))\n",
-    "print(validation_time(\"super\", 100))"
+    "print(validation_time(\"super\", 100))\n",
+    "print(validation_time(\"PasswordPassword\", 300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Crypto.PublicKey import RSA\n",
+    "from Crypto.Cipher import PKCS1_OAEP\n",
+    "import time\n",
+    "\n",
+    "# Generate RSA Key Pair (for testing)\n",
+    "def generate_rsa_keys():\n",
+    "    key = RSA.generate(1024)\n",
+    "    private_key = key.export_key()\n",
+    "    public_key = key.publickey().export_key()\n",
+    "    return private_key, public_key\n",
+    "\n",
+    "# Encrypt a message\n",
+    "def rsa_encrypt(public_key, message):\n",
+    "    rsa_key = RSA.import_key(public_key)\n",
+    "    cipher = PKCS1_OAEP.new(rsa_key)\n",
+    "    encrypted_msg = cipher.encrypt(message.encode())\n",
+    "    return encrypted_msg\n",
+    "\n",
+    "# Decrypt a message\n",
+    "def rsa_decrypt(private_key, encrypted_msg):\n",
+    "    rsa_key = RSA.import_key(private_key)\n",
+    "    cipher = PKCS1_OAEP.new(rsa_key)\n",
+    "    start_time = time.time()\n",
+    "    decrypted_msg = cipher.decrypt(encrypted_msg)\n",
+    "    end_time = time.time()\n",
+    "    return decrypted_msg.decode(), (end_time - start_time)\n"
    ]
   },
   {
